# oskit

./: CMakeLists.txt
src/: oskit.cppm
src/implementation/: definitions.hpp  notify.cpp
src/interface/: notify.cppm
